                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-09-2005 added: rar files can now be extracted using filemanager.
 - 25-09-2005 updated: German language file
 - 25-09-2005 updated: Italian language file (Thnx to kotix)
 - 25-09-2005 updated: Norwegian language file (Thnx to vnm)
 - 25-09-2005 updated: French language file (Thnx to lacrevette)
 - 25-09-2005 changed: removed load of libdvdcss-2.dll from InputStreamNavigator
 - 25-09-2005 changed: cdripper now uses original vorbis dlls ( dlls in \system\cdrip got updated)
 - 25-09-2005 fixed: my music files not filtering files by extension
 - 25-09-2005 fixed: problems using window ID 5
 - 25-09-2005 added: dlls load referenced dlls when a dll is loaded
 - 25-09-2005 updated: Xboxmediacenter.xml, added .SPC to music extensions
 - 24-09-2005 fixed: Visualization NONE resulted in 1 logentry / frame
 - 24-09-2005 updated: kai-vectors.xml
 - 24-09-2005 changed: added more default paths for MyPrograms bookmarks (emulators/apps).
 - 24-09-2005 fixed: Potential crash in NSF codec.
 - 24-09-2005 added: SPC (Super NES sound file) codec for paplayer. Based on snes9x's APU.
 - 24-09-2005 added: New Screensaver: "Slideshow"! You can define the folder, where your pictures are.  Recursive Slideshow! [GeminiServer]
 - 23-09-2005 fixed: AlarmClock command parser.
 - 23-09-2005 fixed: Release build wouldn't compile due to missing file
 - 23-09-2005 fixed: very short wavs (< 1 second) could not be played (PAPlayer)
 - 23-09-2005 fixed: mono mp3's could not be played (PAPlayer, MadCodec.dll)
 - 23-09-2005 changed: [ 1286764 ] slightly modified, added E:\Games\ & G:\Games\ to Myprograms Games bookmark.